# computer-vision

./: .envrc  .gitignore  config.yaml  main.py  pyproject.toml  skypilot.yaml
notebooks/: test.ipynb
src/: trainer.py
src/models/: vgg.py
src/utils/: dataset.py  logger.py
tests/models/: test_vgg.py
